--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
-    "axios": "^1.9.0",
     "cpf-cnpj-validator": "^1.0.3",
     "expo": "~53.0.4",
     "expo-checkbox": "~4.1.4",
-    "expo-file-system": "~18.1.10",
-    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "libphonenumber-js": "^1.12.7",
     "react": "19.0.0",
@@ -34,7 +31,9 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.10.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-file-system": "~18.1.10",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
