atualizacao SobreScreen.js

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Projeto Modelo (ARA0089)",
+    "name": "Meu Bairro",
     "slug": "projetoModelo",
     "version": "1.0.0",
     "orientation": "portrait",
